View tools wrapped in div/style fix

--- a/assets/scss/_page-listing.scss
+++ b/assets/scss/_page-listing.scss
@@ -265,8 +265,20 @@
 		}
 	}
 
-
 } // .nestedpages
+
+// Page Search Form
+.nestedpages-tools {
+	@include clearfix;
+	clear: both;
+	margin-bottom: 10px;
+	.subsubsub {
+		margin: 0;
+	}
+}
+.np-search {
+	float: right;
+}
 
 @media (min-width: 768px)
 {
